# f1-eval

./: README.md  pyproject.toml
f1_eval/: __main__.py  collector.py
